<resources>
    <string name="app_name">RestauranTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restauran_tracker">RestauranTracker</string>
    <string name="new_restauran">New Restauran</string>
    <string name="qualification_text">Qualification</string>
    <string name="name_text">Name</string>
    <string name="location_text">Location</string>
    <string name="type_of_cuisine_text">type of cuisine</string>
</resources>