<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewRestauranFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:text="@string/new_restauran"
            android:textSize="@dimen/new_restauran_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_text"
            android:layout_marginTop="@dimen/default_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:hint="@string/type_of_cuisine_text"
            android:layout_marginTop="@dimen/default_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:hint="@string/qualification_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText6">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_text"
            android:layout_marginTop="@dimen/default_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText5">

        </com.google.android.material.textfield.TextInputEditText>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/big_gap"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->

</FrameLayout>